commit for chat and review for service provider

--- a/public/BlueChat.css
+++ b/public/BlueChat.css
@@ -8,6 +8,10 @@ body {
     padding-left: 50px;
 }
 
+.car_heightmobile.active{
+    background: linear-gradient(to left,#9bd6e2,#21beea);
+}
+
 .chatM2 {
     position: relative;
     left: 35px;
